       a specific OVS table or all routes from all tables.
     * Added a new sub-command, ovs/router/rule/show, to list OVS router rules.
     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
       add/delete a route from a specific OVS table.
     * 'ovs/route/lookup': added new option, src=IP, to perform lookup with
       a specific source IP address.
   - ovs-vsctl:
     * Now exits with error code 160 (ERROR_BAD_ARGUMENTS) on Windows and
       65 (EX_DATAERR) on other platforms if it fails while waiting for
       ovs-vswitchd to finish reconfiguring itself after a successful
       database transaction.  E.g., when ovs-vswitchd fails to add a new
       port or a bridge.
     * Added '--filter' option to the 'show' command.
   - SSL/TLS:
     * Support for deprecated TLSv1 and TLSv1.1 protocols on OpenFlow and
       database connections is now removed.
   - Tunnels:
     * Support for previously deprecated LISP and STT tunnel port types
       is now removed.
   - ovs-tcpdump:
     * Update the --mirror-to option, adding support for specifying an
       existing port as a mirror interface.
   - Added support for running tests from 'check-kernel' and 'check-offloads'
     system test targets under retis by setting OVS_TEST_WITH_RETIS=yes.
     See the 'Testing' section of the documentation for more details.
   - Updated documentation to remove most documentation of kernel module
     that was previously part of the OVS distribution. It was removed from
     the OVS distribution in the 3.0 release and is no longer present in
     any supported versions of OVS. The remaining documentation of this
     kernel module relates to topics for older releases of OVS.


v3.5.0 - 17 Feb 2025
--------------------
   - The limit on the number of fields for address prefix tracking in flow
     tables increased from 3 to 4.  For example, it is now possible to
     specify both IPv4 and IPv6 address fields at the same time: